Switching to a more explicit travis.yml configuration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,3 @@
 language: objective-c
-install: ./Scripts/run-tests.sh
+podfile: Tests/iOS/Podfile
+xcode_workspace: Tests/iOS/ISUtilitiesTests.xcworkspace
