--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: objective-c
 podfile: Tests/iOS/Podfile
 xcode_workspace: Tests/iOS/ISUtilitiesTests.xcworkspace
+xcode_sdk: iphonesimulator8.1
