--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
 language: objective-c
-xcode_workspace: Tests/iOS/ISUtilitiesTests.xcworkspace
-xcode_scheme: ISUtilitiesTests
-xcode_sdk: iphonesimulator8.1
 podfile: Tests/iOS/Podfile
+script: ./Scripts/run-tests
